# boulder-bot

./: .gitignore  Dockerfile  README.md  _config.yml  config.yml  domain.yml  index.md  knowledge_base_data.json  pyproject.toml  talk-to-me.html  talk-to-me.md
.github/: PULL_REQUEST_AUTOMATIC_TEMPLATE.md
.github/ISSUE_TEMPLATE/: default-issue-template.md
.github/workflows/: automatic-merger-master.yml  automatic-pr-merger.yml  rasa.yml  test-continuous-integration.yml
actions/: actions.py
data/: nlu.md  responses.md  stories.md
tests/: test_core_stories.md  test_stories.md
