[tool.poetry]
name = "boulder-bot"
version = "0.1.0"
description = "A bot answering questions about bouldering"
authors = ["m-vdb"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
rasa = "^1.8.1"
tensorflow-estimator = "2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>0.12"]
build-backend = "poetry.masonry.api"
