[tool.poetry]
name = "boulder-bot"
version = "0.1.0"
description = "A bot answering questions about bouldering"
authors = ["m-vdb"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
rasa = {git = "https://github.com/RasaHQ/rasa.git", rev = "rules"}
rasa-sdk = "^1.10.0"
spacy = "2.1.9"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>0.12"]
build-backend = "poetry.masonry.api"
